update about section

--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
         twist. Developed as a portfolio project for ALX, it reflects our journey
         in game development.
       </p>
-      <p>
-        <strong>Timeline:</strong> 5 weeks of intense development,
-        collaboration, and iteration.
-      </p>
-      <p><strong>Team Members:</strong></p>
+      <p><strong>Timeline</strong></p>
+      <p>5 weeks of intense development, collaboration, and iteration.</p>
+      <p><strong>Team Members</strong></p>
       <!-- <ul>
         <li>
           <a href="https://linkedin.com/in/walidmehelba">Walid Mehelba</a>
